# jobs-rag

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/src/: __init__.py  agent.py  tools.py  vectorstore.py
backend/src/routes/: question.py
frontend/: .prettierignore  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: chat.tsx  mode-toggle.tsx
frontend/components/ui/: alert-dialog.tsx  avatar.tsx  badge.tsx  button.tsx  card.tsx  chat-container.tsx  code-block.tsx  combobox.tsx  dropdown-menu.tsx  field.tsx  hover-card.tsx  input-group.tsx  input.tsx  loader.tsx  markdown.tsx  message.tsx  prompt-input.tsx  prompt-suggestion.tsx  select.tsx  source.tsx  switch.tsx  system-message.tsx  textarea.tsx  tooltip.tsx
frontend/hooks/: use-question.ts
frontend/lib/: api.ts
